--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <!--
   ~ /**
-  ~  * Created by DemonApps on 02.12.2021, 17:40
+  ~  * Created by DemonApps on 28.12.2021, 18:33
   ~  * Copyright (c) 2021 . All rights reserved.
-  ~  * Last modified 02.12.2021, 17:13
+  ~  * Last modified 28.12.2021, 18:08
   ~  */
   -->
 
@@ -16,6 +16,8 @@
     <string name="backward">Back</string>
     <string name="forward">Forw</string>
     <string name="info">Info</string>
+    <string name="biker">Biker FM</string>
+    <string name="moto">Moto Radio</string>
     <string name="menty">Милицейская волна</string>
     <string name="nashe20">Наше радио 2.0</string>
     <string name="nashe">Наше радио</string>
