--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,8 +60,24 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="menu_home">Главная</string>
     <string name="menu_gallery">Клипы</string>
-    <string name="autoplay">Автопроигрывание</string>
+    <string name="autoplay">При включении играть последнее радио</string>
     <string name="konfidecialnost">Политика конфиденциальности</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 
     https://nashe1.hostingradio.ru/nashepunks.mp3
 </resources>
